--- a/humidity.html
+++ b/humidity.html
@@ -54,7 +54,7 @@
                         <h2>Humidity</h2>
                         <hr>
                         <img class="image" src="Resources/assets/images/Fig2.png" alt="humidity image" >
-                        <p class="p1"> We can see that most of the cities have humidity above 60%. The reason for this could be that these cities are closer to water-bodies.</p>
+                        <p class="p1"> Most cities have humidity levels above 60%. This could be due to the fact that these cities are in more tropical climates.</p>
                     <br>        
                     </div>
                 </div>
