--- a/windspeed.html
+++ b/windspeed.html
@@ -51,7 +51,7 @@
                         <h2>Wind Speed</h2>
                         <hr>
                         <img class="image" src="Resources/assets/images/Fig4.png" alt="Wind Speed image">
-                        <p class="p1">From the Latitude vs. Wind Speed chart we can see that, most of the cities have wind speed between 0 mph-10 mph. </p>
+                        <p class="p1">From the Latitude vs. Wind Speed chart we notice most of the cities have wind speeds are between 0 mph-10 mph. </p>
                     <br>        
                     </div>
                 </div>
