--- a/cloudiness.html
+++ b/cloudiness.html
@@ -49,7 +49,7 @@
                         <h2>Cloudiness</h2>
                         <hr>
                         <img class= "image" src="Resources/assets/images/Fig3.png"  alt="cloudiness" >
-                        <p class="p1">As we can see, there is no direct correlation between cloudiness and the latitude of the place. However, we can see that at this time of the year, there are many cities that have 0% cloudiness and many cities that have 70-80% cloudiness.</p>
+                        <p class="p1">There is no direct correlation between cloudiness and a city's latitude. During this time of the year, cities vary from having anywhere from 0% cloudiness, to 70-80% cloudiness.</p>
                     <br>        
                     </div>
                 </div>
